--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "scripts": {
     "lint": "biome check",
     "lint:fix": "biome check --write .",
-    "start": "tsx src/example.ts"
+    "start": "tsx src/example.ts",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@maxchang/biome-config": "^0.0.3",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.14.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.8.0",
   "dependencies": {
