--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "target": "esnext",
     "moduleDetection": "force",
     "module": "Preserve",
     "resolveJsonModule": true,
